[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpyte"
version = "1.6.1"
description = "The Cpyte programming language compiler"
readme = "readme.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Hoang Duy Tung"}
]

dependencies = [
    "llvmlite>=0.45",
    "lsprotocol>=2025.0.0",
]

[project.scripts]
cpy = "cpyte.mainpie:main"

[tool.setuptools.packages.find]
where = ["source"]